--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ server.port=7777
 
 #database
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5444/med_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/med_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 
